tests/ui/incorrect_len.stderr
error[E0080]: evaluation panicked: assertion failed: N == mem::size_of::<T::Type>()
 --> src/string.rs
  |
  |             assert!(N == mem::size_of::<T::Type>());
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<(monostate::alphabet::len<8>, (monostate::alphabet::char<'a'>, monostate::alphabet::char<'s'>, monostate::alphabet::char<'d'>, monostate::alphabet::char<'f'>)) as monostate::string::Sealed>::__private::{constant#0}` failed here

note: erroneous constant encountered
 --> src/string.rs
  |
  | /         const {
  | |             assert!(N == mem::size_of::<T::Type>());
  | |         }
  | |_________^

note: erroneous constant encountered
 --> src/string.rs
  |
  |     const VALUE: &'static str = T::__private.0;
  |                                 ^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/value.rs
  |
  |     pub const VALUE: &'static str = V::VALUE;
  |                                     ^^^^^^^^

note: erroneous constant encountered
  --> tests/ui/incorrect_len.rs:16:19
   |
16 |     let _ = N::<{ monostate::MustBeStr::<__Private>::VALUE.len() }>;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
